fix: Fix typing error with GarageYrBlt

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "2fbe22be",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "3d231f65",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "8209f8cf",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "9b892e49",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "d025f1d7",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "371783da",
    "metadata": {},
    "outputs": [
@@ -1768,7 +1768,7 @@
        "Electrical                1     0.068493"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "d02360e1",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "46712218",
    "metadata": {},
    "outputs": [
@@ -1833,7 +1833,7 @@
        "'\\n1. MSZoning codes are all single letters/combinations without parenthesis. We will replace \"C (all)\" with \"C\" for consistency.\\n2. In data_description text, Twnhs should be classified under TnwhsE or TwhnsI.\\n   With no supporting information from the given columns, we will take a conservative approach\\n   and express all townhouses with Twnhs due to the lack of additional knowledge.\\n3. \"CmentBd\", \"Wd Shng\", and \"Brk Cmn\" are all unexpected classes in Exterior2nd.\\n   However, \"CmentBd\" is obviously a typo of \"CemntBd\" present in both Exterior2nd and Exterior1st.\\n   Also, seeing as similar categories are present in Exterior1st (as WdShing and BrkCmn), we must standardize Exterior2nd.\\n4. For area/size columns (these are the ones missing values),\\n5. There are columns which affect others, meaning that if set to 0, other columns should be set to NA.\\n   for example,  if no TotalBsmtSF, then BsmtQual, BsmtCond, BsmtExposure, BsmtFinType1, BsmtFinType2\\n   should be NA (NO BASEMENT, these values would not make sense)\\n   these are the relationships we have identified\\n   column to check if 0 -> column/s to set as NA\\n      TotalBsmtSF -> BsmtQual, BsmtCond, BsmtExposure, BsmtFinType1, BsmtFinType1,\\n                     BsmtFinSF1, BsmtFinType2, BsmtFinSF2, BsmtUnfSF, BsmtFullBath,\\n                     BsmtHalfBath\\n      GarageArea -> GarageType, GarageYrBlt, GarageFinish, GarageQual, GarageCond\\n      Fireplaces -> FireplaceQu\\n      PoolArea -> PoolQC\\n      MasVnrArea -> MasVnrType\\n      MiscVal -> MiscFeature\\n6. Duplicate IDs (or duplicated content ignoring IDs) don\\'t need to be addressed anymore.\\n   We have shown that these do not exist earlier.\\n7. Remove outliers to normalize data in the following columns: SalePrice, LotArea, GrLivArea\\n   While they may be real, they are outliers nevertheless. We can normalize them using a log scale.\\n   However, i\\'d like to check if these values skewed enough to justify log transform.\\n   After testing, I can confirm that it\\'s appropriate!\\n8. Handle missing data accordingly:\\n   a. DROP \\'PoolQC\\',\\'MiscFeature\\',\\'Alley\\',\\'Fence\\'. (>90% missing, basically useless)\\n   b. Moderately empty numeric columns (LotFrontage) will be filled with median\\n   c. Handle low missingness with the NA convention we talked about above (related columns)\\n'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "f503e20b",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "cba0b9af",
    "metadata": {},
    "outputs": [
@@ -2055,8 +2055,8 @@
     "    na_counts[f'basement_{col}'] = (df[col] == 0).sum() - before\n",
     "\n",
     "garage_condition = (df['GarageArea'] == 0) | (df['GarageArea'].isna())\n",
-    "garage_cols = ['GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageQual', 'GarageCond']\n",
-    "\n",
+    "garage_cols = ['GarageType', 'GarageFinish', 'GarageQual', 'GarageCond']\n",
+    "garage_yr_cols = ['GarageYrBlt']\n",
     "for col in garage_cols:\n",
     "    before = df[col].isna().sum()\n",
     "    df.loc[garage_condition, col] = 'NA'\n",
