--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2118,22 +2118,25 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'CollgCr'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_11132\\1237059579.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    122\u001b[39m     predictors = [\u001b[33m'LotArea'\u001b[39m, \u001b[33m'YearBuilt'\u001b[39m, \u001b[33m'OverallQual'\u001b[39m, \u001b[33m'OverallCond'\u001b[39m, \u001b[33m'Neighborhood'\u001b[39m]\n\u001b[32m    123\u001b[39m     predictors = [p \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;28;01min\u001b[39;00m predictors \u001b[38;5;28;01mif\u001b[39;00m p \u001b[38;5;28;01min\u001b[39;00m df.columns]  \u001b[38;5;66;03m# only keep if they exist\u001b[39;00m\n\u001b[32m    124\u001b[39m     cols_for_impute = predictors + [\u001b[33m'LotFrontage'\u001b[39m]\n\u001b[32m    125\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m126\u001b[39m     imputed = imp.fit_transform(df[cols_for_impute])\n\u001b[32m    127\u001b[39m     df[\u001b[33m'LotFrontage'\u001b[39m] = imputed[:, -\u001b[32m1\u001b[39m]\n\u001b[32m    128\u001b[39m \n\u001b[32m    129\u001b[39m     print(\u001b[33mf\"LotFrontage imputed for {lotfrontage_missing} rows using IterativeImputer\"\u001b[39m)\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_set_output.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, X, *args, **kwargs)\u001b[39m\n\u001b[32m    314\u001b[39m     @wraps(f)\n\u001b[32m    315\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m wrapped(self, X, *args, **kwargs):\n\u001b[32m--> \u001b[39m\u001b[32m316\u001b[39m         data_to_wrap = f(self, X, *args, **kwargs)\n\u001b[32m    317\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m isinstance(data_to_wrap, tuple):\n\u001b[32m    318\u001b[39m             \u001b[38;5;66;03m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[32m    319\u001b[39m             return_tuple = (\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1361\u001b[39m                 skip_parameter_validation=(\n\u001b[32m   1362\u001b[39m                     prefer_skip_nested_validation \u001b[38;5;28;01mor\u001b[39;00m global_skip_validation\n\u001b[32m   1363\u001b[39m                 )\n\u001b[32m   1364\u001b[39m             ):\n\u001b[32m-> \u001b[39m\u001b[32m1365\u001b[39m                 \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, *args, **kwargs)\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\impute\\_iterative.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m    797\u001b[39m         self.imputation_sequence_ = []\n\u001b[32m    798\u001b[39m \n\u001b[32m    799\u001b[39m         self.initial_imputer_ = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    800\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m801\u001b[39m         X, Xt, mask_missing_values, complete_mask = self._initial_imputation(\n\u001b[32m    802\u001b[39m             X, in_fit=\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    803\u001b[39m         )\n\u001b[32m    804\u001b[39m \n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\impute\\_iterative.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, X, in_fit)\u001b[39m\n\u001b[32m    623\u001b[39m             ensure_all_finite = \u001b[33m\"allow-nan\"\u001b[39m\n\u001b[32m    624\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    625\u001b[39m             ensure_all_finite = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    626\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m627\u001b[39m         X = validate_data(\n\u001b[32m    628\u001b[39m             self,\n\u001b[32m    629\u001b[39m             X,\n\u001b[32m    630\u001b[39m             dtype=FLOAT_DTYPES,\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(_estimator, X, y, reset, validate_separately, skip_check_array, **check_params)\u001b[39m\n\u001b[32m   2950\u001b[39m             out = y\n\u001b[32m   2951\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   2952\u001b[39m             out = X, y\n\u001b[32m   2953\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m no_val_X \u001b[38;5;28;01mand\u001b[39;00m no_val_y:\n\u001b[32m-> \u001b[39m\u001b[32m2954\u001b[39m         out = check_array(X, input_name=\u001b[33m\"X\"\u001b[39m, **check_params)\n\u001b[32m   2955\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;28;01mand\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m no_val_y:\n\u001b[32m   2956\u001b[39m         out = _check_y(y, **check_params)\n\u001b[32m   2957\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_writeable, force_all_finite, ensure_all_finite, ensure_non_negative, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[39m\n\u001b[32m   1050\u001b[39m                         )\n\u001b[32m   1051\u001b[39m                     array = xp.astype(array, dtype, copy=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m   1052\u001b[39m                 \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1053\u001b[39m                     array = _asarray_with_order(array, order=order, dtype=dtype, xp=xp)\n\u001b[32m-> \u001b[39m\u001b[32m1054\u001b[39m             \u001b[38;5;28;01mexcept\u001b[39;00m ComplexWarning \u001b[38;5;28;01mas\u001b[39;00m complex_warning:\n\u001b[32m   1055\u001b[39m                 raise ValueError(\n\u001b[32m   1056\u001b[39m                     \u001b[33m\"Complex data not supported\\n{}\\n\"\u001b[39m.format(array)\n\u001b[32m   1057\u001b[39m                 ) from complex_warning\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\_array_api.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(array, dtype, order, copy, xp, device)\u001b[39m\n\u001b[32m    753\u001b[39m         \u001b[38;5;66;03m# Use NumPy API to support order\u001b[39;00m\n\u001b[32m    754\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m copy \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m    755\u001b[39m             array = numpy.array(array, order=order, dtype=dtype)\n\u001b[32m    756\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m757\u001b[39m             array = numpy.asarray(array, order=order, dtype=dtype)\n\u001b[32m    758\u001b[39m \n\u001b[32m    759\u001b[39m         \u001b[38;5;66;03m# At this point array is a NumPy ndarray. We convert it to an array\u001b[39;00m\n\u001b[32m    760\u001b[39m         \u001b[38;5;66;03m# container that is consistent with the input's namespace.\u001b[39;00m\n",
-      "\u001b[32mc:\\Users\\lifei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, dtype, copy)\u001b[39m\n\u001b[32m   2164\u001b[39m             )\n\u001b[32m   2165\u001b[39m         values = self._values\n\u001b[32m   2166\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m copy \u001b[38;5;28;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   2167\u001b[39m             \u001b[38;5;66;03m# Note: branch avoids `copy=None` for NumPy 1.x support\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2168\u001b[39m             arr = np.asarray(values, dtype=dtype)\n\u001b[32m   2169\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   2170\u001b[39m             arr = np.array(values, dtype=dtype, copy=copy)\n\u001b[32m   2171\u001b[39m \n",
-      "\u001b[31mValueError\u001b[39m: could not convert string to float: 'CollgCr'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LotFrontage imputed for 259 rows using IterativeImputer (numeric predictors: ['LotArea', 'YearBuilt', 'OverallQual', 'OverallCond'])\n",
+      "Data cleaning summary:\n",
+      "Rows: 1460 -> 1303\n",
+      "Columns: 81 -> 77\n",
+      "Outliers removed: 157\n",
+      "Categorical changes:\n",
+      "  MSZoning: 10 values standardized\n",
+      "  Neighborhood: 1 values standardized\n",
+      "Conditional NA assignments:\n",
+      "  -2 total NA/zero assignments\n",
+      "Outlier ranges:\n",
+      "  SalePrice: $34,900-$755,000 -> $62,383-$451,950\n",
+      "  LotArea: $1,300-$215,245 -> $3,982-$21,930\n",
+      "  GrLivArea: $334-$5,642 -> $605-$3,493\n",
+      "Missing values filled: LotFrontage(259), MasVnrType(0)\n",
+      "Columns dropped: PoolQC, MiscFeature, Alley, Fence\n"
      ]
     }
    ],
@@ -2253,10 +2256,6 @@
     "df.loc[df['MasVnrArea'] == 0, 'MasVnrType'] = 'None'\n",
     "\n",
     "# 3. Handle missing data\n",
-    "dropped_cols = ['PoolQC', 'MiscFeature', 'Alley', 'Fence']\n",
-    "df = df.drop(columns=dropped_cols)\n",
-    "\n",
-    "# 3. Handle missing data (minimal IterativeImputer for LotFrontage only)\n",
     "dropped_cols = ['PoolQC', 'MiscFeature', 'Alley', 'Fence']\n",
     "df = df.drop(columns=[c for c in dropped_cols if c in df.columns])\n",
     "\n",
